--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.5.7",
     "emailjs-com": "^3.2.0",
+    "financejs": "^4.1.0",
     "html2pdf.js": "^0.10.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
