--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "financejs": "^4.1.0",
     "html2pdf.js": "^0.10.1",
     "ionicons": "^7.0.0",
+    "ngx-pdf-make": "^0.0.3",
+    "pdfmake": "^0.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -48,6 +50,7 @@
     "@capacitor/cli": "5.5.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfmake": "^0.2.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
