--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "financejs": "^4.1.0",
     "html2pdf.js": "^0.10.1",
     "ionicons": "^7.0.0",
+    "mathjs": "^12.1.0",
     "ngx-pdf-make": "^0.0.3",
     "pdfmake": "^0.2.8",
     "rxjs": "~7.8.0",
@@ -50,6 +51,7 @@
     "@capacitor/cli": "5.5.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/mathjs": "^9.4.2",
     "@types/pdfmake": "^0.2.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
